# django_websockets

./: README.md  app.py  build_proto.sh  handler.py  pyproject.toml  requirements.txt  server.py  teste.py  utils.py
.github/workflows/: wheels.yml
consumers/: __init__.py
management/commands/: server.py
management/commands/utils/: arguments.py  main.py
middlewares/: __init__.py  auth.py  route.py  scope.py
src/django_websockets/: app.py  setup.py  teste.py  utils.py
src/django_websockets/consumers/: __init__.py
src/django_websockets/groups/: __init__.py
src/django_websockets/groups/backends/: __init__.py
src/django_websockets/management/commands/: websockets_server.py
src/django_websockets/middlewares/: __init__.py  auth.py  route.py  scope.py  utils.py
src/django_websockets/proto/: wstransport.proto
src/django_websockets/server/: arguments.py  handler.py  horchestration.py  main.py  server.py
src/django_websockets/transport/: __init__.py
src/django_websockets/transport/proto/: wstransport_pb2.py  wstransport_pb2.pyi  wstransport_pb2_grpc.py
